[project]
name = "trustpoint-core"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[[tool.uv.index]]
name = "trustpoint-core"
url = "https://pypi.org/p/trustpoint-core"
publish-url = "https://test.pypi.org/legacy/"
